# toy_stream_processor

./: Cargo.toml  README.md
.github/workflows/: ci.yml
fixture/: 00_expected_output.csv  00_transactions_in.csv
src/: client.rs  ids.rs  logging.rs  main.rs  positive_decimal.rs  processor.rs  transaction.rs
src/reader/: mod.rs  raw_transaction.rs
