[package]
name = "toy_stream_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
csv = "1.3.1"
derive_more = { version = "0.99.17", features = ["constructor", "display", "from", "into"] }
rust_decimal = { version = "1.36.0", features = ["serde", "serde-with-arbitrary-precision"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_variant = "0.1.3"
thiserror = "2.0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
rust_decimal_macros = "1.36.0"
